[package]
name = "radicle-remote-helper"
description = "Radicle git remote helper"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.10.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"
build = "build.rs"

[dependencies]
thiserror = { version = "1" }
log = { version = "0.4.17" }
radicle-git-ext = { version = "0.8.0" }

[dependencies.radicle]
path = "../radicle"
version = "0"

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"

[dependencies.radicle-cli]
path = "../radicle-cli"
version = "0"

[[bin]]
name = "git-remote-rad"
path = "src/git-remote-rad.rs"
