[package]
name = "radicle-remote-helper"
description = "Radicle git remote helper"
homepage = "https://radicle.xyz"
license = "MIT OR Apache-2.0"
version = "0.10.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"
build = "build.rs"
rust-version.workspace = true

[[bin]]
name = "git-remote-rad"
path = "src/git-remote-rad.rs"

[dependencies]
radicle = { workspace = true }
radicle-cli = { workspace = true }
radicle-crypto = { workspace = true }
radicle-git-ext = { workspace = true }
thiserror = { workspace = true }