[package]
name = "radicle-remote-helper"
description = "Radicle git remote helper"
homepage.workspace = true
license.workspace = true
version = "0.10.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition.workspace = true
build = "build.rs"
rust-version.workspace = true

[[bin]]
name = "git-remote-rad"
path = "src/git-remote-rad.rs"

[dependencies]
radicle = { workspace = true }
radicle-cli = { workspace = true }
radicle-crypto = { workspace = true }
radicle-git-ext = { workspace = true }
thiserror = { workspace = true }