[package]
name = "radicle-signals"
description = "Radicle signal handling"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.11.0"

[dependencies]
crossbeam-channel = { version = "0.5.6" }
libc = { version = "0.2" }
signals_receipts = { version = "0.2.0", features = ["channel_notify_facility"] }
