[package]
name = "radicle-ssh"
description = "Radicle SSH library"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "Apache-2.0"
version = "0.9.0"
authors = [
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
  "Pierre-Étienne Meunier <pe@pijul.org>",
  "cloudhead <cloudhead@radicle.xyz>"
]
edition = "2021"

[dependencies]
byteorder = "1.4"
log = "0.4"
thiserror = "1.0"
zeroize = "1.5.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [ "Win32_System_Pipes", "Win32_System_IO", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security" ] }
windows-named-pipe = "0.1.0"
debug_unreachable = "0.1.1"