[package]
name = "radicle-ssh"
description = "Radicle SSH library"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "Apache-2.0"
version = "0.9.0"
authors = [
  "Fintan Halpenny <fintan.halpenny@gmail.com>",
  "Pierre-Étienne Meunier <pe@pijul.org>",
  "cloudhead <cloudhead@radicle.xyz>"
]
edition = "2021"
rust-version.workspace = true

[dependencies]
byteorder = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
