[package]
name = "radicle-term"
description = "Terminal library used by the Radicle CLI"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "MIT OR Apache-2.0"
version = "0.9.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"

[features]
default = ["git2"]

[dependencies]
anyhow = { version = "1" }
anstyle-query = { version = "1.0.0" }
inquire = { version = "0.7.4", default-features = false, features = ["termion", "editor"] }
libc = { version = "0.2" }
once_cell = { version = "1.13" }
shlex = { version = "1.1" }
termion = { version = "3" }
unicode-display-width = { version = "0.3.0" }
unicode-segmentation = { version = "1.7.1" }
zeroize = { version = "1.1" }

[dependencies.git2]
version = "0.18.1"
default-features = false
features = ["vendored-libgit2"]
optional = true

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }
tempfile = { version = "3.3.0" }
