[package]
name = "radicle-term"
description = "Terminal library used by the Radicle CLI"
homepage.workspace = true
repository.workspace = true
license.workspace = true
version = "0.12.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition.workspace = true
rust-version.workspace = true

[features]
default = ["git2"]

[dependencies]
anyhow = { workspace = true }
anstyle-query = "1.0.0"
crossbeam-channel = { workspace = true }
inquire = { version = "0.7.4", default-features = false, features = ["termion", "editor"] }
libc = { workspace = true }
shlex = { workspace = true }
termion = "3"
thiserror = { workspace = true }
unicode-display-width = "0.3.0"
unicode-segmentation = "1.7.1"
zeroize = { workspace = true }
git2 = { workspace = true, features = ["vendored-libgit2"], optional = true }
radicle-signals = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
