[package]
name = "radicle-tools"
license = "MIT OR Apache-2.0"
version = "0.9.0"
authors = ["Alexis Sellier <alexis@radicle.xyz>"]
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "rad-init"
path = "src/rad-init.rs"

[[bin]]
name = "rad-self"
path = "src/rad-self.rs"

[[bin]]
name = "rad-merge"
path = "src/rad-merge.rs"

[[bin]]
name = "rad-set-canonical-refs"
path = "src/rad-set-canonical-refs.rs"

[[bin]]
name = "rad-push"
path = "src/rad-push.rs"

[[bin]]
name = "rad-agent"
path = "src/rad-agent.rs"

[[bin]]
name = "rad-cli-demo"
path = "src/rad-cli-demo.rs"

[dependencies]
anyhow = { workspace = true }
radicle = { workspace = true }
radicle-cli = { workspace = true }
# N.b. this is required to use macros, even though it's re-exported
# through radicle
radicle-git-ext = { workspace = true, features = ["serde"] }
radicle-term = { workspace = true }