[package]
name = "radicle"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["Alexis Sellier <alexis@radicle.xyz>"]
edition = "2021"

[features]
default = []
test = ["qcheck", "radicle-crypto/test"]
sql = ["sqlite"]

[dependencies]
amplify = { version = "4.0.0-beta.7", default-features = false, features = ["std"] }
crossbeam-channel = { version = "0.5.6" }
# FIXME: Remove the extra cyphernet features once we're able to.
cyphernet = { version = "0.1.0", features = ["tor", "dns", "i2p", "nym", "ed25519"] }
fastrand = { version = "1.8.0" }
git-ref-format = { version = "0", features = ["serde", "macro"] }
multibase = { version = "0.9.1" }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.8.1", features = ["serialize"] }
once_cell = { version = "1.13" }
olpc-cjson = { version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
siphasher = { version = "0.3.10" }
radicle-git-ext = { version = "0", features = ["serde"] }
sqlite = { version = "0.30.3", optional = true }
tempfile = { version = "3.3.0" }
thiserror = { version = "1" }

[dependencies.git2]
version = "0.16.1"
default-features = false
features = ["vendored-libgit2"]

[dependencies.radicle-cob]
path = "../radicle-cob"
version = "0"

[dependencies.radicle-crdt]
path = "../radicle-crdt"
version = "0"

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["git-ref-format", "ssh", "sqlite", "cyphernet"]

[dependencies.radicle-ssh]
path = "../radicle-ssh"
version = "0"
default-features = false

[dependencies.qcheck]
version = "1"
default-features = false
optional = true

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }
qcheck-macros = { version = "1", default-features = false }
qcheck = { version = "1", default-features = false }

[dev-dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["test"]

[dev-dependencies.radicle-crdt]
path = "../radicle-crdt"
version = "0"
features = ["test"]
