[package]
name = "radicle"
description = "Radicle standard library"
homepage = "https://radicle.xyz"
repository = "https://app.radicle.xyz/seeds/seed.radicle.xyz/rad:z3gqcJUoA1n9HaHKufZs5FCSGazv5"
license = "MIT OR Apache-2.0"
version = "0.13.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition = "2021"

[features]
default = []
test = ["qcheck", "radicle-crypto/test"]
logger = ["colored", "chrono"]

[dependencies]
amplify = { version = "4.0.0", default-features = false, features = ["std"] }
base64 = { version = "0.21.3" }
crossbeam-channel = { version = "0.5.6" }
cyphernet = { version = "0.5.0", features = ["tor", "dns", "p2p-ed25519"] }
fastrand = { version = "2.0.0" }
multibase = { version = "0.9.1" }
localtime = { version = "1.2.0", features = ["serde"] }
libc = { version = "0.2" }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.9.0", features = ["serialize"] }
once_cell = { version = "1.13" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
signature = { version = "2.2" }
siphasher = { version = "1.0.0" }
radicle-git-ext = { version = "0.8.0", features = ["serde"] }
sqlite = { version = "0.32.0", features = ["bundled"] }
tempfile = { version = "3.3.0" }
thiserror = { version = "1" }
unicode-normalization = { version = "0.1" }

[dependencies.chrono]
version = "0.4.0"
default-features = false
features = ["clock"]
optional = true

[dependencies.colored]
version = "2.1.0"
optional = true

[dependencies.git2]
version = "0.19.0"
default-features = false
features = ["vendored-libgit2"]

[dependencies.radicle-agent]
path = "../radicle-agent"
version = "0"

[dependencies.radicle-cob]
path = "../radicle-cob"
version = "0"

[dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["radicle-git-ext", "ssh", "sqlite", "cyphernet"]

[dependencies.radicle-ssh]
path = "../radicle-ssh"
version = "0"
default-features = false

[dependencies.qcheck]
version = "1"
default-features = false
optional = true

[dev-dependencies]
pretty_assertions = { version = "1.3.0" }
qcheck-macros = { version = "1", default-features = false }
qcheck = { version = "1", default-features = false }

[dev-dependencies.radicle-crypto]
path = "../radicle-crypto"
version = "0"
features = ["test"]

[dev-dependencies.radicle-cob]
path = "../radicle-cob"
version = "0"
features = ["stable-commit-ids"]
