[package]
name = "radicle-cli-test"
description = "Radicle CLI test library"
homepage.workspace = true
license.workspace = true
version = "0.11.0"
authors = ["cloudhead <cloudhead@radicle.xyz>"]
edition.workspace = true
categories = ["development-tools::testing"]
keywords = ["cli", "test", "command"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
escargot = "0.5.7"
log = { workspace = true, features = ["std"] }
pretty_assertions = { workspace = true }
radicle = { workspace = true, features = ["logger", "test"]}
shlex = { workspace = true }
snapbox = { workspace = true }
thiserror = { workspace = true }